--- a/manifest.json
+++ b/manifest.json
@@ -2,22 +2,25 @@
   "name": "Amazigh TV - Films Kabyles",
   "short_name": "Amazigh TV",
   "description": "Films et courts métrages Kabyles en streaming HD",
-  "start_url": "/",
+  "start_url": "./index.html",
   "display": "standalone",
   "background_color": "#0d0d0d",
   "theme_color": "#e50914",
-  "orientation": "any",
+  "orientation": "portrait",
   "icons": [
     {
-      "src": "images/logo-192.png",
+      "src": "./images/logo-192.png",
       "sizes": "192x192",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any maskable"
     },
     {
-      "src": "images/logo-512.png",
+      "src": "./images/logo-512.png",
       "sizes": "512x512",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any maskable"
     }
   ],
-  "categories": ["entertainment", "video"]
+  "categories": ["entertainment", "video"],
+  "scope": "./"
 }
