Mise à jour du site avec la nouvelle vidéo

--- a/manifest.json
+++ b/manifest.json
@@ -1,26 +1,23 @@
 {
-  "name": "Amazigh TV - Films Kabyles",
-  "short_name": "Amazigh TV",
-  "description": "Films et courts métrages Kabyles en streaming HD",
-  "start_url": "./index.html",
+  "name": "Amazigh TV",
+  "short_name": "Amazigh TV", 
+  "description": "Films Kabyles en streaming",
+  "start_url": "/",
   "display": "standalone",
   "background_color": "#0d0d0d",
   "theme_color": "#e50914",
-  "orientation": "portrait",
+  "orientation": "any",
   "icons": [
     {
-      "src": "./images/logo-192.png",
+      "src": "/images/logo-192.png",
       "sizes": "192x192",
-      "type": "image/png",
-      "purpose": "any maskable"
+      "type": "image/png"
     },
     {
-      "src": "./images/logo-512.png",
+      "src": "/images/logo-512.png", 
       "sizes": "512x512",
-      "type": "image/png",
-      "purpose": "any maskable"
+      "type": "image/png"
     }
   ],
-  "categories": ["entertainment", "video"],
-  "scope": "./"
+  "categories": ["entertainment"]
 }
