--- a/vercel.json
+++ b/vercel.json
@@ -3,51 +3,43 @@
     {
       "source": "/assets/script-data-check.js",
       "destination": "https://www.highperformanceformat.com/85d327bd7bc680a54c9d1b8821f7d634/invoke.js"
-    }
+    },
+
+    { "source": "/", "destination": "/films/pucci1.html", "has": [{"type": "host","value": "pucci1.amazigh-tv.site"}] },
+    { "source": "/", "destination": "/films/pucci2.html", "has": [{"type": "host","value": "pucci2.amazigh-tv.site"}] },
+
+    { "source": "/", "destination": "/films/narnia1.html", "has": [{"type": "host","value": "narnia1.amazigh-tv.site"}] },
+    { "source": "/", "destination": "/films/narnia2.html", "has": [{"type": "host","value": "narnia2.amazigh-tv.site"}] },
+
+    { "source": "/", "destination": "/films/limucu1.html", "has": [{"type": "host","value": "limucu1.amazigh-tv.site"}] },
+    { "source": "/", "destination": "/films/limucu2.html", "has": [{"type": "host","value": "limucu2.amazigh-tv.site"}] }
+
   ],
   "headers": [
     {
       "source": "/sitemap.xml",
       "headers": [
-        {
-          "key": "Content-Type",
-          "value": "application/xml"
-        },
-        {
-          "key": "Cache-Control",
-          "value": "public, max-age=3600"
-        },
-        {
-          "key": "Content-Encoding",
-          "value": ""
-        }
+        { "key": "Content-Type", "value": "application/xml" },
+        { "key": "Cache-Control", "value": "public, max-age=3600" },
+        { "key": "Content-Encoding", "value": "" }
       ]
     },
     {
       "source": "/assets/(.*)",
       "headers": [
-        {
-          "key": "Cache-Control",
-          "value": "public, max-age=3600, must-revalidate"
-        }
+        { "key": "Cache-Control", "value": "public, max-age=3600, must-revalidate" }
       ]
     },
     {
       "source": "/images/(.*)",
       "headers": [
-        {
-          "key": "Cache-Control", 
-          "value": "public, max-age=86400, must-revalidate"
-        }
+        { "key": "Cache-Control", "value": "public, max-age=86400, must-revalidate" }
       ]
     },
     {
       "source": "/(.*).(css|js)",
       "headers": [
-        {
-          "key": "Cache-Control",
-          "value": "public, max-age=31536000, immutable"
-        }
+        { "key": "Cache-Control", "value": "public, max-age=31536000, immutable" }
       ]
     }
   ]
