Ajout fichier ads.txt sans conversion CRLF

--- a/vercel.json
+++ b/vercel.json
@@ -23,8 +23,7 @@
       "source": "/sitemap.xml",
       "headers": [
         { "key": "Content-Type", "value": "application/xml" },
-        { "key": "Cache-Control", "value": "public, max-age=3600" },
-        { "key": "Content-Encoding", "value": "" }
+        { "key": "Cache-Control", "value": "public, max-age=3600" }
       ]
     },
     {
